--- a/package.json
+++ b/package.json
@@ -3,24 +3,38 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "dev": "nodemon --config config/nodemon.config.json",
+    "start": "node -r ts-node/register/transpile-only src/bin/www"
   },
   "dependencies": {
     "config": "^3.3.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
+    "helmet": "^4.4.1",
     "morgan": "^1.9.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/config": "^0.0.38",
+    "@types/cors": "^2.8.10",
+    "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.2",
+    "@types/winston": "^2.4.4",
+    "@types/compression": "^1.7.0",
+    "@types/node": "^14.14.31",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "typescript": "^4.1.5",
+    "ts-node": "^9.1.1"
   }
 }
