--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/winston": "^2.4.4",
     "@types/compression": "^1.7.0",
     "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
