--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --config config/nodemon.config.json",
-    "start": "node -r ts-node/register/transpile-only src/bin/www"
+    "start": "node -r ts-node/register/transpile-only src/bin/www",
+    "lint": "eslint --ext .js,.ts --fix"
   },
   "dependencies": {
     "config": "^3.3.3",
@@ -34,9 +35,23 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.1",
     "nodemon": "^2.0.7",
     "prettier": "2.2.1",
     "typescript": "^4.1.5",
     "ts-node": "^9.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,ts}": [
+      "npm run lint"
+    ],
+    "**/*.{json,css,scss,md}": [
+      "prettier --write"
+    ]
   }
 }
